# Auto-robots

./: .gitignore
src/: README.md
src/tb4_cpp_prac1/: CMakeLists.txt  package.xml
src/tb4_cpp_prac1/install/: local_setup.sh  setup.sh
src/tb4_cpp_prac1/install/tb4_cpp_prac1/lib/tb4_cpp_prac1/: tb4_cpp_node  tb4_cpp_srv_server
src/tb4_cpp_prac1/install/tb4_cpp_prac1/share/ament_index/resource_index/package_run_dependencies/: tb4_cpp_prac1
src/tb4_cpp_prac1/install/tb4_cpp_prac1/share/ament_index/resource_index/parent_prefix_path/: tb4_cpp_prac1
src/tb4_cpp_prac1/install/tb4_cpp_prac1/share/tb4_cpp_prac1/: local_setup.sh  package.sh  package.xml
src/tb4_cpp_prac1/src/: tb4_cpp_node.cpp  tb4_cpp_srv_server.cpp
src/tb4_cpp_prac2/install/: local_setup.sh  setup.sh
src/tb4_cpp_prac2/install/tb4_cpp_prac2/lib/tb4_cpp_prac2/: tb4_arc_action
src/tb4_cpp_prac2/install/tb4_cpp_prac2/share/tb4_cpp_prac2/: local_setup.sh  package.sh
src/tb4_cpp_prac2/log/: latest_build
src/tb4_cpp_prac2/src/: .tb4_arc_action.cpp.swp  tb4_arc_action.cpp
